# mojian

./: CLAUDE.md  Cargo.toml  README.md
.claude/agents/: archivist-agent.md  builder-agent.md  design-agent.md  planning-agent.md  prd-gatekeeper-agent.md  prd-mapper-agent.md  prd-summarizer-agent.md  qa-agent.md  requirements-agent.md
.esr_harnass/: managed-lock.tsv  manifest.tsv
.esr_harnass/guides/: design.md  devops.md  failure_pattern.md  infra.md  naming.md  prd-checklist.md  product.md  tech-design.md
.esr_harnass/protocol/: builder_driver.md  init.md  prd_driver.md  task-template.md
crates/mojian-cli/: Cargo.toml
crates/mojian-core/: Cargo.toml
crates/mojian-core/src/: error.rs  lib.rs  paths.rs
crates/mojian-core/src/context/: assemble.rs  manifest.rs  mod.rs  slice.rs  symbol.rs
crates/mojian-core/src/db/: migrate.rs  mod.rs  schema.rs
crates/mojian-core/src/domain/: chapter_state.rs  extract_status.rs  mod.rs  sop_phase.rs
crates/mojian-core/src/engine/: mod.rs
crates/mojian-core/src/log/: mod.rs
crates/mojian-core/src/project/: manifest.rs  mod.rs
crates/mojian-core/src/sdk/: claude_cli.rs  mod.rs
crates/mojian-core/src/spec/: deploy.rs  hash.rs  master.rs  mod.rs
crates/mojian-core/src/state/: mod.rs
crates/mojian-core/tests/: context_assemble.rs  db.rs  engine_loop.rs  log_jsonl.rs  paths.rs  project.rs  sdk_runner.rs  spec.rs
docs/: devops.md  failure_pattern.md  infra.md  naming.md  product.md  tech-design.md
docs/tech-design/: domain-model.md  engine.md  overview.md  prompts.md  storage.md
docs/work/: history.md  (+1 more)
(+50 files in other folders)
