[workspace]
resolver = "2"
members = [
    "crates/mojian-core",
    "crates/mojian-cli",
]

[workspace.dependencies]
rusqlite = { version = "0.31", features = ["bundled"] }
clap = { version = "4", features = ["derive"] }
directories = "5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
blake3 = "1"
uuid = { version = "1", features = ["v4"] }
time = { version = "0.3", features = ["formatting"] }
anyhow = "1"
thiserror = "1"
include_dir = "0.7"
